# distributors

./: .gitignore  ChangeLog.md  LICENSE  README.md  distributors.cabal  sketch.hs  stack.yaml
app/: Main.hs
src/Control/: Distributor.hs  Grammar.hs  PartialIso.hs  Token.hs
src/Control/Token/: Example.hs
src/Data/Profunctor/: Monoidal.hs  Monoidal_.hs
src/Json/: Distributor.hs
src/Text/: Distributor.hs  PP.hs
src/Text/Distributor/: Grammar.hs
