cabal-version: 1.12

name:           distributors
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/echatav/distributors#readme>
homepage:       https://github.com/echatav/distributors#readme
bug-reports:    https://github.com/echatav/distributors/issues
author:         Eitan Chatav
maintainer:     eitan@morphism.tech
copyright:      2022 Eitan Chatav
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/echatav/distributors

library
  exposed-modules:
      Control.Distributor
      Json.Distributor
      Text.Distributor
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , contravariant
    , language-typescript
    , profunctors
  default-language: Haskell2010

executable distributors-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , distributors
  default-language: Haskell2010

test-suite distributors-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , distributors
  default-language: Haskell2010
