cabal-version: 1.12

name:           distributors
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/echatav/distributors#readme>
homepage:       https://github.com/echatav/distributors#readme
bug-reports:    https://github.com/echatav/distributors/issues
author:         Eitan Chatav
maintainer:     eitan@morphism.tech
copyright:      2022 Eitan Chatav
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/echatav/distributors

library
  exposed-modules:
      Control.Distributor
      Control.Grammar
      Control.Token
      Control.Token.Example
      Control.PartialIso
      Data.Profunctor.Monoidal
      Data.Profunctor.Monoidal_
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bifunctors
    , contravariant
    , lens
    , mtl
    , profunctors
    , selective
    , tagged
    , witherable
  default-language: Haskell2010

test-suite distributors-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , distributors
  default-language: Haskell2010
